--- a/MathBomb/bin/AndroidManifest.xml
+++ b/MathBomb/bin/AndroidManifest.xml
@@ -24,13 +24,18 @@
             android:screenOrientation="landscape">
         </activity>
         <activity
-            android:name=".NewGame"
+            android:name=".MainMenu"
             android:label="@string/app_name" 
             android:screenOrientation="landscape">
-            <intent-filter>
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".NewGame"
+            android:label="@string/app_name" 
+            android:screenOrientation="landscape">           
         </activity>
     </application>
 
