--- a/MathBomb/AndroidManifest.xml
+++ b/MathBomb/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:label="@string/app_name" 
             android:screenOrientation="landscape">           
         </activity>
+        <activity
+            android:name=".ScoreShow"
+            android:label="@string/app_name" 
+            android:screenOrientation="landscape">           
+        </activity>
     </application>
 
 </manifest>
