--- a/MathBomb/AndroidManifest.xml
+++ b/MathBomb/AndroidManifest.xml
@@ -12,27 +12,27 @@
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
-        >
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainMenuActivity"
-            android:screenOrientation="portrait">
-             <intent-filter>
+            android:screenOrientation="portrait" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".StartGameActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".NewGameActivity"
-            android:screenOrientation="portrait">           
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".HighScoreActivity"
-            android:screenOrientation="portrait">           
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
